librellog/src/parse/snapshots/librellog__parse__tests__list_with_spread.snap
---
source: librellog/src/parse/tests.rs
expression: parse_to_tm(src)
---
Ok(
    Cons(
        Var(Var(X$)),
        Var(Var(Xs$)),
    ),
)
