librellog/src/parse/snapshots/librellog__parse__tests__singleton_list.snap
---
source: librellog/src/parse/tests.rs
expression: "parse_to_tm(\"{123}\")"
---
Ok(
    Cons(
        Int(123),
        Nil,
    ),
)
