librellog/src/parse/snapshots/librellog__parse__tests__snapshot_tests@operator1.rellog.snap
---
source: librellog/src/parse/tests.rs
expression: parse_to_tm(&src)
input_file: librellog/src/parse/snapshot_tests/operator1.rellog
---
Ok(
    BinOp(
        Equal,
        Var(Var(A$)),
        Int(1),
    ),
)
