librellog/src/parse/snapshots/librellog__parse__tests__txt_tmpl_with_interpolation.snap
---
source: librellog/src/parse/tests.rs
expression: parse_to_tm(src)
---
Ok(
    TxtSeg(
        "asdf"->TxtCons(Var(Var(Letter$)), TxtSeg("qwer"->Nil)),
    ),
)
